# phenolrs

./: Cargo.toml  Dockerfile  Dockerfile-build  README.md  dev-requirements.txt  pyproject.toml  setup_sa.sh  temp.py  test-requirements.txt
.circleci/: config.yml
.github/workflows/: release.yml
adb_data_loader/: Cargo.toml
adb_data_loader/src/: lib.rs
adb_data_loader/src/arangodb/: aql.rs  dump.rs  info.rs
adb_data_loader/src/client/: config.rs
adb_data_loader/src/input/: load_request.rs  mod.rs
benchmarks/: adb_cloud.py  local.py
docker/: start_db.sh  start_db_macos.sh  stop_db.sh
python/phenolrs/: __init__.py  coo_loader.py  graph_loader.py  networkx_loader.py  numpy_loader.py  phenolrs.pyi  pyg_loader.py  typings.py
python/phenolrs/networkx/: __init__.py  loader.py  typings.py
python/phenolrs/numpy/: __init__.py  loader.py
python/phenolrs/pyg/: __init__.py  loader.py
python/tests/: conftest.py  test_all.py
src/: arangodb.rs  client.rs  convert.rs  graph.rs  graphs.rs  input.rs  lib.rs  load_request.rs  output.rs  retrieval.rs
src/arangodb/: aql.rs  dump.rs  mod.rs
src/client/: auth.rs  builder.rs  mod.rs
src/input/: load_request.rs  parse.rs
src/load/: load_strategy.rs  mod.rs  receive.rs  retrieve.rs
src/output/: construct.rs  convert.rs  mod.rs
