[package]
name = "phenolrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "phenolrs"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.20.0"
tokio = { version = "1", features = ["full"] }
bytes = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version= "0.11.24", features = ["json", "rustls-tls-manual-roots"] }
log = "0.4"
ndarray = "0.15.6"

[dependencies.pyo3]
version = "0.20.2"
default-features = false

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]