[package]
name = "phenolrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "phenolrs"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = "fat"
# TODO: add rustflags for target features/cpus

[dependencies]
numpy = "0.20.0"
tokio = { version = "1", features = ["full"] }
bytes = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version= "0.11", features = ["json", "rustls-tls"] }
reqwest-retry = "0.3.0"
reqwest-middleware = "0.2.4"
log = "0.4"
ndarray = "0.15.6"

[dependencies.pyo3]
version = "0.20.3"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]