[package]
name = "phenolrs"
version = "0.5.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "phenolrs"
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
lto = "fat"
# TODO: add rustflags for target features/cpus

[dependencies]
arangors-graph-exporter = "0.0.9"
numpy = "0.20.0"
tokio = { version = "1", features = ["full"] }
bytes = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.16", features = ["json", "rustls-tls"] }
reqwest-retry = "0.3.0"
reqwest-middleware = "0.2.4"
log = "0.4.22"
env_logger = "0.11.5"
ndarray = "0.15.6"
anyhow = "1.0.80"

[dependencies.pyo3]
version = "0.20.2"

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]
