[package]
name = "adb_data_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.38.0"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = "0.12.4"
reqwest-middleware = "0.2.4"
bytes = "1.5.0"
