[package]
name = "adb_data_loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "1.38.0"
serde = { version = "1.0.203", features = ["derive"] }
reqwest = { version= "0.11", features = ["json", "rustls-tls"] }
reqwest-retry = "0.3.0"
reqwest-middleware = "0.2.4"
serde_json = "1.0"
bytes = "1.5.0"
log = "0.4.20"

[dependencies.pyo3]
version = "0.20.2"